syntax = "proto3";

package omniscience;

import "document.proto";
import "google/protobuf/timestamp.proto";

service GoogleDrive {
    // Gets all of a user's Google Drive documents.
    rpc GetAll (GetAllDocumentsRequest) returns (GetAllDocumentsResponse) {}
}

message GetAllDocumentsRequest {
    google.protobuf.Timestamp modified_since = 1;
}

message GetAllDocumentsResponse {
    repeated Document documents = 1;
}